--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "express": "^4.21.2",
         "express-session": "^1.18.1",
         "joi": "^17.13.3",
+        "mongodb": "^6.16.0",
         "nodemon": "^3.1.10"
     }
 }
